--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,11 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "history": "^5.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.0.0-beta.8",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "semantic-ui-css": "^2.4.1",
