--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "history": "^5.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.0.0-beta.8",
     "react-scripts": "4.0.1",
