--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "[![Join the chat at https://gitter.im/startup-incubator/community](https://badges.gitter.im/startup-incubator/community.svg)](https://gitter.im/startup-incubator/community?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge)",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
