--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "bootstrap": "^5.1.3",
     "history": "^5.1.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.1",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.2",
