--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "startup-incubator",
   "version": "1.0.0",
+ 
   "description": "[![Join the chat at https://gitter.im/startup-incubator/community](https://badges.gitter.im/startup-incubator/community.svg)](https://gitter.im/startup-incubator/community?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge)",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +21,10 @@
   },
   "homepage": " https://github.com/adityabisoi/startup-incubator/#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "mongoose": "^6.2.4"
   }
 }
