--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
  
   "description": "[![Join the chat at https://gitter.im/startup-incubator/community](https://badges.gitter.im/startup-incubator/community.svg)](https://gitter.im/startup-incubator/community?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge)",
-  "main": "Server.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
