--- a/package.json
+++ b/package.json
@@ -22,5 +22,13 @@
     "express": "^4.17.1",
     "mongoose": "^6.2.8",
     "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.12.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0"
   }
 }
