--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": " https://github.com/adityabisoi/startup-incubator/#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.2.8",
     "validator": "^13.7.0"
