--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "concurrently": "^7.1.0",
     "history": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,10 +25,12 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    
+    "start": "concurrently \"react-scripts start\" \"cd .. && node server.js\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+
   },
   "proxy": "http://localhost:5000",
   "eslintConfig": {
