--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   "homepage": " https://github.com/adityabisoi/startup-incubator/#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.2.8",
     "validator": "^13.7.0"
   },
   "devDependencies": {
-    "eslint": "^8.12.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
