--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
+    "nodemailer": "^6.7.5",
     "validator": "^13.7.0"
   },
   "devDependencies": {
