--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": " https://github.com/adityabisoi/startup-incubator/#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "concurrently": "^7.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.17.1",
