--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "redux": "^4.1.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
+    "validator": "^13.7.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
