--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \"cd .. && node server.js\"",
+    "start": "concurrently \"react-scripts start\" \"cd .. && nodemon server.js\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
